--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="vendor/bootstrap/dist/js/bootstrap.min.js">    
 </head>
 <body class='container'>
+    <div class="text-right">
+        <p>
+            Logado como: <span id="usuario-logado">
+                <%=usuarioLogado %>
+                <span>
+            <a href="/logout">Logout</a>
+        </p>
+    </div>
 	<div ng-view></div>
 	<script src="vendor/angular/angular.js"></script>
 	<script src="vendor/angular-route/angular-route.js"></script>
@@ -21,3 +29,4 @@
 	<script src="js/controllers/CursoController.js"></script>
 </body>
 </html>
+
